<!--
  ~ This file is part of UnToasted.
  ~
  ~ Copyright 2014 Eric Gingell (c)
  ~
  ~     UnToasted is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     UnToasted is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with UnToasted.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">UnToaster Xposed</string>
    <string name="app_name_logs">UnToaster Logs</string>
    <string name="sorry">To add filters, put the package name (e.g &quot;com.egingell.untoaster&quot;) - check the Xposed log for the package name - and the text you\'re blocking (regex is OK) in the other box and click Save.</string>
    <string name="xposedlog">Xposed Log</string>
    <string name="back">Back</string>
    <string name="nofile">Sorry, I couldn\'t open the Xposed Log.</string>
    <string name="saveButton">Save</string>
    <string name="cancelButton">Exit</string>
    <string name="resetButton">Reset</string>
    <string name="deleteButton">Delete</string>
    <string name="refresh">Refresh</string>
    <string name="packageHint">com.example.app - use "all" for all apps.</string>
    <string name="patternHint">Regex patterns or strings. One per line. Example:\n\nToast message\\.\nApp .* loaded\\.\n\nNote that since it does use regex, periods and other special characters must be escaped with a \"\\\".</string>
    <string name="tab1">Main</string>
    <string name="tab2">Log</string>
    <string name="existing">Existing</string>
    <string name="log">Logs</string>
    <string name="edit">Edit</string>
</resources>
