<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/deleteButton" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/resetButton" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cancelButton" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/saveButton" />
    </LinearLayout>

    <EditText
        android:id="@+id/fileName"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_weight="0.01"
        android:ems="10"
        android:hint="@string/packageHint"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editPattern"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:ems="10"
        android:gravity="center_vertical|top"
        android:hint="@string/patternHint"
        android:inputType="textMultiLine" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="0.26"
        android:clickable="true"
        android:drawSelectorOnTop="false"
        android:longClickable="false" />
</LinearLayout>