<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="?android:attr/buttonBarStyle" >
	    <Button
	        android:id="@+id/refresh"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/refresh"
            style="?android:attr/buttonBarButtonStyle" />
	
	    <Button
	        android:id="@+id/edit"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/edit"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cancelButton"
            style="?android:attr/buttonBarButtonStyle" />
	</LinearLayout>

    <EditText
        android:id="@+id/logs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:ems="10"
        android:gravity="center_vertical|top"
        android:hint=""
        android:inputType="textMultiLine"
        android:scrollHorizontally="true" />

</LinearLayout>